fixing postioning of content-wrap, adding propper bottom spacing to content-wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,9 +59,8 @@ header {
     padding: 20px;
     min-height: 300px;
     background: #ffffff;
-    margin: 0 auto;
     border: 1px solid #cccccc;
-    margin-top: 20px;
+	margin: 50px auto;
     box-sizing: border-box;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -81,7 +80,7 @@ footer {
     background: #666666;
     text-align: center;
     width: 100%;
-    position: fixed;
+    position: sticky;
     bottom: 0;
     border-top: 7px solid #4aaaa5;
     padding: 20px;
